src/test/ui/borrowck/borrowck-partial-reinit-4.stderr
error[E0381]: assign of possibly uninitialized variable: `x.0`
  --> $DIR/borrowck-partial-reinit-4.rs:17:5
   |
LL |     (x.0).0 = Some(Test);
   |     ^^^^^^^ use of possibly uninitialized `x.0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
